@@ -1,7 +1,6 @@
 package org.antlr.works.ate.breakpoint;
 
 import org.antlr.works.ate.ATEPanel;
-import org.antlr.works.syntax.element.ElementRule;
 
 import java.util.List;
 import java.util.Set;
@@ -48,5 +47,5 @@ public abstract class ATEBreakpointManager {
         return textEditor.getGutter().getBreakpoints();
     }
 
-    public abstract List<ElementRule> getBreakpointEntities();
+    public abstract List<? extends ATEBreakpointEntity> getBreakpointEntities();
 }
